<resources>
    <string name="app_name">Ferreteria</string>
    <string name="enter_email">Ingrese un Email</string>
    <string name="enter_password">Ingrese una contraseña</string>
    <string name="registrar">Registrar usuario</string>
    <string name="regresar">Regresar</string>
    <string name="enter_email1">Ingrese su Email</string>
    <string name="enter_password1">Ingrese su contraseña</string>
    <string name="logiar">Ingresar</string>
    <string name="title_activity_maps">Map</string>
</resources>
